--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendar</title>
-    <link rel="stylesheet" href="./styles/main.scss" />
+    <link rel="stylesheet" href="./styles/main.css" />
   </head>
   <body>
     <section class="calendar calendar--start-day-sun calendar--month-length-31">
-      <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
