--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   </head>
   <!-- #endregion -->
   <body>
-    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+    <div class="calendar calendar--start-day--sun calendar--month-length--31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
