--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
       href="styles/index.scss"
     />
   </head>
-  <body class="page">
-    <div class="calendar calendar--start-day-sun calendar--month-length-31">
+  <body class="body">
+    <div class="calendar calendar--month-length-31 calendar--start-day-sun">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
