--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,12 @@
     <title>Calendar</title>
     <link
       rel="stylesheet"
-      href="styles/index.scss"
+      href="styles/main.scss"
     />
   </head>
   <body>
     <div class="container">
-      <div class="calendar calendar--start-day-mon calendar--month-length-31">
+      <div class="calendar calendar--start-day-sun calendar--month-length-31">
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
         <div class="calendar__day"></div>
