--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,40 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar">
+      <div class="calendar__field">
+        <div class="calendar__cell calendar__cell--start-day--sun"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+      </div>
+    </div>
   </body>
 </html>
