--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       href="./styles/index.scss"
     />
   </head>
-  <body class="calendar">
+  <body>
     <div class="calendar calendar--start-day-sun calendar--month-length-31">
       <div class="calendar__day"></div>
       <div class="calendar__day"></div>
