--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,55 @@
     />
   </head>
   <body>
-    <h1>Calendar</h1>
+    <header class="header">
+      <h1 class="header__title">Calendar</h1>
+      <div class="header__name">
+        <span class="header__span">January</span>
+      </div>
+    </header>
+
+    <main class="calendar">
+      <div class="calendar__day">Sun</div>
+      <div class="calendar__day">Mon</div>
+      <div class="calendar__day">Tue</div>
+      <div class="calendar__day">Wed</div>
+      <div class="calendar__day">Thu</div>
+      <div class="calendar__day">Fri</div>
+      <div class="calendar__day">Sat</div>
+    </main>
+
+    <section class="container">
+      <div class="container__card">1</div>
+      <div class="container__card">2</div>
+      <div class="container__card">3</div>
+      <div class="container__card">4</div>
+      <div class="container__card">5</div>
+      <div class="container__card">6</div>
+      <div class="container__card">7</div>
+      <div class="container__card">8</div>
+      <div class="container__card">9</div>
+      <div class="container__card">10</div>
+      <div class="container__card">11</div>
+      <div class="container__card">12</div>
+      <div class="container__card">13</div>
+      <div class="container__card">14</div>
+      <div class="container__card">15</div>
+      <div class="container__card">16</div>
+      <div class="container__card">17</div>
+      <div class="container__card">18</div>
+      <div class="container__card">19</div>
+      <div class="container__card">20</div>
+      <div class="container__card">21</div>
+      <div class="container__card">22</div>
+      <div class="container__card">23</div>
+      <div class="container__card">24</div>
+      <div class="container__card">25</div>
+      <div class="container__card">26</div>
+      <div class="container__card">27</div>
+      <div class="container__card">28</div>
+      <div class="container__card">29</div>
+      <div class="container__card">30</div>
+      <div class="container__card">31</div>
+    </section>
   </body>
 </html>
