--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,48 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendar</title>
-    <link
-      rel="stylesheet"
-      href="styles/index.scss"
-    />
+    <link rel="stylesheet" href="styles/index.scss" />
   </head>
+
   <body>
-    <h1>Calendar</h1>
+    <div class="calendar">
+      <div
+        class="calendar__field calendar__field--start-day--sun calendar__field--month-length--31"
+      >
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+        <div class="calendar__cell"></div>
+      </div>
+    </div>
   </body>
 </html>
