--- a/src/index.html
+++ b/src/index.html
@@ -8,41 +8,39 @@
   </head>
 
   <body>
-    <div class="calendar">
-      <div
-        class="calendar__field calendar__field--start-day--sun calendar__field--month-length--31"
-      >
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
-        <div class="calendar__cell"></div>
+    <div class="calendar-container">
+      <div class="calendar calendar--start-day-sun calendar--month-length-31">
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
+        <div class="calendar__day"></div>
       </div>
     </div>
   </body>
